# ht32-panel

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  garnix.yaml
.github/workflows/: ci.yml  docs.yml  release.yml
config/: default.toml
crates/ht32-panel-applet/: Cargo.toml
crates/ht32-panel-applet/src/: dbus_client.rs  main.rs  tray.rs
crates/ht32-panel-cli/: Cargo.toml
crates/ht32-panel-cli/src/: dbus_client.rs  main.rs
crates/ht32-panel-client/: README.md
crates/ht32-panel-client/src/: lib.rs
crates/ht32-panel-daemon/: Cargo.toml
crates/ht32-panel-daemon/src/: config.rs  main.rs  state.rs
crates/ht32-panel-daemon/src/dbus/: interface.rs  mod.rs
crates/ht32-panel-daemon/src/faces/: arcs.rs  ascii.rs  clock.rs  detailed.rs  digits.rs  minimal.rs  mod.rs  professional.rs
crates/ht32-panel-daemon/src/rendering/: canvas.rs  mod.rs  text.rs
crates/ht32-panel-daemon/src/sensors/: cpu.rs  data.rs  disk.rs  memory.rs  mod.rs  network.rs  system.rs
crates/ht32-panel-daemon/src/web/: mod.rs
crates/ht32-panel-daemon/templates/: base.html  index.html
crates/ht32-panel-daemon/templates/partials/: background.html  colors.html  complications.html  face.html  ip-display.html  led.html  network.html  orientation.html  preview.html  status.html  widgets.html
crates/ht32-panel-hw/: Cargo.toml
crates/ht32-panel-hw/src/: error.rs  lib.rs  orientation.rs
crates/ht32-panel-hw/src/lcd/: device.rs  framebuffer.rs  mod.rs  protocol.rs
crates/ht32-panel-hw/src/led/: device.rs  mod.rs
doc/: config.html  index.html  install.html
nix/: home-module.nix  module.nix
packaging/: 99-ht32-panel.rules  GPG-KEY  ht32-panel.gpg  ht32-panel.repo  ht32-panel.service  ht32-panel.sources  nfpm-gui.yaml  nfpm.yaml  org.ht32panel.Daemon.desktop
packaging/appimage/: AppRun
packaging/flatpak/: org.ht32panel.Daemon.yml
themes/: default.toml
